--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -2,53 +2,57 @@
 @{
     ViewData["Title"] = "Club";
 }
+
 <body class="body5">
-<!--modal-->
-<div class="modal fade" id="ModalClub" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Agregar Club</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <input type="hidden" id="ClubId" value="0">
-                <div class="control-label">
-                    <p>Nombre</p>
-                    <input type="text"class="form-control" id="Nombre" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
-                    <p>Localidad</p>
-                     <input type="text"class="form-control" id="Localidad" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+    <!--modal-->
+    <div class="modal fade" id="ModalClub" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Agregar Club</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" onclick="GuardarClub()" class="btn btn-primary">Guardar</button>
+                <div class="modal-body">
+                    <input type="hidden" id="ClubId" value="0">
+                    <div class="control-label">
+                        <p>Nombre</p>
+                        <input type="text" class="form-control" id="Nombre" autocomplete="off"
+                            onkeyup="this.value = this.value.toUpperCase()">
+                        <p>Localidad</p>
+                        <input type="text" class="form-control" id="Localidad" autocomplete="off"
+                            onkeyup="this.value = this.value.toUpperCase()">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" onclick="GuardarClub()" class="btn btn-primary">Guardar</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div>
-     <h1 class="display-4 titulo">Club</h1>
+    <div>
+        <h1 class="display-4 titulo">Club</h1>
 
-      <!-- Button trigger modal -->
-      <div class="mb-2">
-        <button type="button" onclick="VaciarFormulario()" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalClub">
-            Nuevo
-        </button>
-      </div>
-      <table class="table table-bordered table-striped table-condensed">
-    <thead>
-        <tr>
-            <th>Nombre</th>
-            <th>Localidad</th>
-        </tr>
-    </thead>
-        <tbody id="tbody-club">        
-        </tbody>
-  </table>
-</div>
-    
+        <!-- Button trigger modal -->
+        <div class="mb-2">
+            <button type="button" onclick="VaciarFormulario()" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#ModalClub">
+                Nuevo
+            </button>
+        </div>
+        <table class="table table-bordered table-striped table-condensed">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Localidad</th>
+                </tr>
+            </thead>
+            <tbody id="tbody-club">
+            </tbody>
+        </table>
+    </div>
+
 </body>
-  @section Scripts{
+@section Scripts{
     <script src="~/js/club-1.0.0.js"></script>
 }
