--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,15 +16,14 @@
             <div class="container-fluid">
                 @* Propiedades del logo (Boton de "inicío/Home"). *@
                 <a class=" nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="css/img/APC.png" class="APC" alt="logo" width="150px" >
+                    <img src="css/img/APC.png" class="APC" alt="logo" width="150px">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        
                         <li class="nav-item">
                             <a class="BTN nav-link" asp-area="" asp-controller="Ranking" asp-action="Index">Ranking</a>
                         </li>
