--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -1,107 +1,33 @@
 @model IEnumerable<TesisPadel.Models.Usuario>
 
  @{
-Layout = "_Layout";
+    ViewData["Title"]="Usuario";
 }
-
-<!DOCTYPE html>
-
-<html class="Formato">
-<head>
-<meta name="viewport" content="width=device-width" />
-<h1 style="color: white;">Usuario</h1>
-</head>
-<body>
-<p>
-<a class="botonCrear" asp-action="Create">Crear nuevo</a>
-</p>
-<div>
-<table class="table" style="color: white;">
-<thead>
-<tr>
-<th>
-@Html.DisplayNameFor(model => model.Localidad)
-</th>
-<th>
-@Html.DisplayNameFor(model => model.Nombre)
-</th>
-<th>
-@Html.DisplayNameFor(model => model.Apellido)
-</th>
-<th>
-@Html.DisplayNameFor(model => model.Edad)
-</th>
-<th>
-@Html.DisplayNameFor(model => model.Telefono)
-</th>
-<th>
-@Html.DisplayNameFor(model => model.DNI)
-</th>
-<th>
-@Html.DisplayNameFor(model => model.Direccion)
-</th>
-<th>
-@Html.DisplayNameFor(model => model.Eliminado)
-</th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-@foreach (var item in Model) {
-<tr>
-<td>
-@Html.DisplayFor(modelItem => item.Localidad)
-</td>
-<td>
-@Html.DisplayFor(modelItem => item.Nombre)
-</td>
-<td>
-@Html.DisplayFor(modelItem => item.Apellido)
-</td>
-<td>
-@Html.DisplayFor(modelItem => item.Edad)
-</td>
-<td>
-@Html.DisplayFor(modelItem => item.Telefono)
-</td>
-<td>
-@Html.DisplayFor(modelItem => item.DNI)
-</td>
-<td>
-@Html.DisplayFor(modelItem => item.Direccion)
-</td>
-<td>
-@Html.DisplayFor(modelItem => item.Eliminado)
-</td>
-<td>
-<a class="botonEditar" asp-action="Edit" asp-route-id="@item.UsuarioId">Editar</a>
-<a class="btn botonEliminar" asp-action="Delete" onclick="EliminarUsuario(@item.UsuarioId);">Eliminar</a>
-</td>
-</tr>
-}
-</tbody>
-</table>
-</div>
-
-</body>
-</html> 
-
-@* <body class="body-5">
+ <body class="body-5">
     <!--modal-->
-    <div class="modal fade" id="ModalClub" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="ModalUsuario" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Agregar Usuario</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Usuario</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <input type="hidden" id="UsuarioId" value="0">
                     <div class="control-label">
-                        <input type="text" class="form-control" id="Nombre" autocomplete="off"
-                            onkeyup="this.value = this.value.toUpperCase()">
-                        <input type="text" class="form-control" id="Localidad" autocomplete="off"
-                            onkeyup="this.value = this.value.toUpperCase()">
+                        <p>Nombre</p>
+                        <input type="text" class="form-control" id="Nombre" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+                        <p>Apellido</p>
+                        <input type="text" class="form-control" id="Localidad" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+                        <p>Localidad</p>
+                        <input type="text" class="form-control" id="Localidad" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+                        <p>Fecha de Nacimiento</p>
+                        <input type="text" class="form-control" id="Localidad" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+                        <p>DNI</p>
+                        <input type="text" class="form-control" id="Localidad" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+                        <p>Telefono</p>
+                        <input type="text" class="form-control" id="Localidad" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -121,7 +47,7 @@ Layout = "_Layout";
                 Nuevo
             </button>
         </div>
-        <table class="table table-bordered table-striped table-condensed">
+        @* <table class="table table-bordered table-striped table-condensed">
             <thead>
                 <tr>
                     <th>Nombre</th>
@@ -130,6 +56,6 @@ Layout = "_Layout";
             </thead>
             <tbody id="tbody-usuario">
             </tbody>
-        </table>
+        </table> *@
     </div>
-</body> *@
+</body> 
