--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -40,12 +40,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Apellido)
             </td>
+            @* <td>
+                @Html.DisplayFor(modelItem => item.Categoria)
+            </td> *@
             <td>
                 @Html.DisplayFor(modelItem => item.Puntos)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.RankingId">Edit</a> 
-                <a asp-action="Delete" asp-route-id="@item.RankingId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.RankingId">Editar</a> 
+                <a asp-action="Delete" asp-route-id="@item.RankingId">Eliminar</a>
             </td>
         </tr>
 }
