--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <body class="ImgHome">
 
   <div class="IHome">
-    <h1 class="HTitulo text-center">APC Padel</h1>
+    <h1 class="HTitulo text-center">APC</h1>
     <p><a href="https://docs.microsoft.com/aspnet/core"></a></p>
   </div>
 
