--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -3,55 +3,27 @@
     ViewData["Title"] = "Ranking";
 }
 
-<!DOCTYPE html>
+<body class="body5">
+    <div class="modal fade" id="ModalRanking" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body class="rankingC">
-<p>
-    <a asp-action="Create" style="background-color: white;">Create New</a>
-</p>
-<div class="FormatoT">
-   <table class="table" style="color: white;">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Puntos)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Apellido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Puntos)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.RankingId">Edit</a> 
-                <a asp-action="Delete" asp-route-id="@item.RankingId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table> 
-</div>
-
+                </div>
+            </div>
+        </div>
+    </div>
+    <table class="table table-bordered table-striped table-condensed">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Club</th>
+                    <th>Puntos</th>
+                </tr>
+            </thead>
+            <tbody id="tbody-ranking">
+            </tbody>
+        </table>
 </body>
 @section script{
     <script src="~/js/ranking-1.0.0.js"></script>
