--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div>
-        <h1 class="display-4 titulo">Club</h1>
+        <h1 class="display-4 titulo bajar" >Club</h1>
 
         <!-- Button trigger modal -->
         <div class="mb-2">
