--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
   <div>
 
     <img src="https://www.onlytenis.com/blog/wp-content/uploads/2022/02/diferencias-entre-padel-y-tenis.jpg"
-      class="ImgHome" style="position: fixed center;">
+      class="ImgHome" style="position: fixed center; margin-left: 17%">
   </div>
 
   <hr class="hr">
@@ -78,35 +78,55 @@
 
   @* Seccion profesores *@
  
-  <div class="Profes row">
+  <div class="Profes row col-lg-12 col-md-9">
     <div class="card" style="width: 10rem;">
-      <img class="card-img-top" src="https://img.freepik.com/foto-gratis/retrato-hermoso-mujer-joven-posicion-pared-gris_231208-10760.jpg" alt="CardI image cap">
+     <a href="https://www.facebook.com/club.lapaquita"><img class="card-img-top" src="~/css/img/La-Paquita.png" alt="CardI image cap"></a> 
       <div class="card-body2">
-        <h5 class="card-title">Profesor</h5>
+        <h5 class="card-title">La Paquita</h5>
       </div>
     </div>
 
     <div class="card" style="width: 10rem;">
-      <img class="card-img-top" src="https://img.freepik.com/foto-gratis/retrato-hermoso-mujer-joven-posicion-pared-gris_231208-10760.jpg" alt="Card-image-cap">
+    <a href="https://www.facebook.com/profile.php?id=100064522097167"><img class="card-img-top tamañoIc" src="~/css/img/chipion.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
-        <h5 class="card-title">Profesor</h5>
+        <h5 class="card-title">Chipion</h5>
       </div>
     </div>
 
     <div class="card" style="width: 10rem;">
-      <img class="card-img-top" src="https://img.freepik.com/foto-gratis/retrato-hermoso-mujer-joven-posicion-pared-gris_231208-10760.jpg" alt="Card-image-cap">
+     <a href="https://www.facebook.com/clubcentrosocial"><img class="card-img-top" src="~/css/img/centro.png" alt="Card-image-cap"></a> 
       <div class="card-body2">
-        <h5 class="card-title">Profesor</h5>
+        <h5 class="card-title">Centro</h5>
       </div>
     </div>
 
     <div class="card" style="width: 10rem;">
-      <img class="card-img-top" src="https://img.freepik.com/foto-gratis/retrato-hermoso-mujer-joven-posicion-pared-gris_231208-10760.jpg" alt="Card-image-cap">
+     <a href="https://www.facebook.com/tiromorterosoficial"> <img class="card-img-top tamañoIt" src="~/css/img/tiro-de-morteros.png" alt="Card-image-cap"></a>
       <div class="card-body2">
-        <h5 class="card-title">Profesor</h5>
+        <h5 class="card-title">Tiro Federal</h5>
       </div>
     </div>
-  </div> 
+   
+    <div class="card" style="width: 10rem;">
+    <a href="https://www.facebook.com/elnuevedemorteros"><img class="card-img-top" src="~/css/img/9-de-morteros.png" alt="Card-image-cap"></a>  
+      <div class="card-body2">
+        <h5 class="card-title">9 de morteros</h5>
+      </div>
+    </div>
+    
+    <div class="card" style="width: 10rem;">
+    <a href="https://www.facebook.com/profile.php?id=100066839164805"><img class="card-img-top" src="~/css/img/suardi.png" alt="Card-image-cap"></a>  
+      <div class="card-body2">
+        <h5 class="card-title">Suardi</h5>
+      </div>
+    </div> 
+   
+    <div class="card" style="width: 10rem; margin-top: 15px;">
+    <a href="https://www.facebook.com/clubatletico.libertadtrinidad.54"><img class="card-img-top" src="~/css/img/villa-trinidad.png" alt="Card-image-cap"></a>  
+      <div class="card-body2">
+        <h5 class="card-title">Villa Trinidad</h5>
+      </div>
+    </div>
   
 
 
