--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,62 +2,70 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "";
+  ViewData["Title"] = "";
 }
 
 <h1>@ViewData["Title"]</h1>
+
 <body class="LogIn">
   <div class="section">
-  <div class="container">
-    <div class="row full-height justify-content-center">
-      <div class="col-12 text-center align-self-center py-5">
-        <div class="section pb-5 pt-5 pt-sm-2 text-center">
+    <div class="container">
+      <div class="row full-height justify-content-center">
+        <div class="col-12 text-center align-self-center py-5">
+          <div class="section pb-5 pt-5 pt-sm-2 text-center">
 
-          <h6 class="LTI-R mb-0 pb-3"><span class="LTI-R">Iniciar sesión</span><span class="LTI-R">/</span><span class="LTI-R">Registrarse</span></h6>
-          
-          @* Boton para dar vuelta la tarjeta *@
-          <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
-          <label for="reg-log"></label>
+            <h6 class="LTI-R mb-0 pb-3"><span class="LTI-R">Iniciar sesión</span><span class="LTI-R">/</span><span
+                class="LTI-R">Registrarse</span></h6>
 
-        @* seccion iniciar sesion *@
-          <div class="card-3d-wrap mx-auto">
-            <div class="card-3d-wrapper">
-              <div class="card-front">
-                <div class="center-wrap">
-                  <div class="section text-center">
-                    <h4 class="mb-4 pb-3">Iniciar sesión</h4>
-                    <div class="form-group">
-                      <input type="email" name="logemail" class="form-style" placeholder="E-mail" id="logemail" autocomplete="off">
-                      <i class="input-icon uil uil-at"></i>
+            @* Boton para dar vuelta la tarjeta *@
+            <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+            <label for="reg-log"></label>
+
+            @* seccion iniciar sesion *@
+            <div class="card-3d-wrap mx-auto">
+              <div class="card-3d-wrapper">
+                <div class="card-front">
+                  <div class="center-wrap">
+                    <div class="section text-center">
+                      <h4 class="mb-4 pb-3">Iniciar sesión</h4>
+                      <div class="form-group">
+                        <input type="email" name="logemail" class="form-style" placeholder="E-mail" id="logemail"
+                          autocomplete="off">
+                        <i class="input-icon uil uil-at"></i>
+                      </div>
+                      <div class="form-group mt-2">
+                        <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass"
+                          autocomplete="off">
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+                      <a href="#" class="btn mt-4" id="btn_login">Iniciar sesión</a>
+                      <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Olvide mi contraseña</a></p>
                     </div>
-                    <div class="form-group mt-2">
-                      <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass" autocomplete="off">
-                      <i class="input-icon uil uil-lock-alt"></i>
-                    </div>
-                    <a href="#" class="btn mt-4">Iniciar sesión</a>
-                    <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Olvide mi contraseña</a></p>
                   </div>
                 </div>
-              </div>
 
-              @* seccion registrarse *@
-              <div class="card-back">
-                <div class="center-wrap">
-                  <div class="section text-center">
-                    <h4 class="mb-4 pb-3">Registrarse</h4>
-                    <div class="form-group">
-                      <input type="text" name="logname" class="form-style" placeholder="Nombre" id="logname" autocomplete="off">
-                      <i class="input-icon uil uil-user"></i>
+                @* seccion registrarse *@
+                <div class="card-back">
+                  <div class="center-wrap">
+                    <div class="section text-center">
+                      <h4 class="mb-4 pb-3">Registrarse</h4>
+                      <div class="form-group">
+                        <input type="email" name="logemail" class="form-style" placeholder="E-mail" id="logemail"
+                          autocomplete="off">
+                        <i class="input-icon uil uil-at"></i>
+                        <div class="form-group mt-2">
+                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass"
+                            autocomplete="off">
+                          <i class="input-icon uil uil-lock-alt"></i>
+                        </div>
+                        <div class="form-group mt-2">
+                          <input type="password" name="logpass" class="form-style" placeholder="Repetir Contraseña"
+                            id="logpass" autocomplete="off">
+                          <i class="input-icon uil uil-lock-alt"></i>
+                        </div>
+                        <a href="#" class="btn mt-4" id="btn_register">Registrarse</a>
+                      </div>
                     </div>
-                    <div class="form-group mt-2">
-                      <input type="email" name="logemail" class="form-style" placeholder="E-mail" id="logemail" autocomplete="off">
-                      <i class="input-icon uil uil-at"></i>
-                    </div>
-                    <div class="form-group mt-2">
-                      <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass" autocomplete="off">
-                      <i class="input-icon uil uil-lock-alt"></i>
-                    </div>
-                    <a href="#" class="btn mt-4">Registrarse</a>
                   </div>
                 </div>
               </div>
@@ -66,8 +74,6 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
 </body>
 
 
