--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Club";
 }
 
-<body class="body5">
+<body class="body5 colorB">
     <!--modal-->
     <div class="modal fade" id="ModalClub" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -30,29 +30,30 @@
             </div>
         </div>
     </div>
-    <div>
         <h1 class="display-4 titulo bajar" >Club</h1>
 
         <!-- Button trigger modal -->
+    <div class="tamañot">
         <div class="mb-2">
             <button type="button" onclick="VaciarFormulario()" class="btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#ModalClub">
                 Nuevo
             </button>
         </div>
-        <table class="table table-bordered table-striped table-condensed">
-            <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Localidad</th>
-                </tr>
-            </thead>
-            <tbody id="tbody-club">
-            </tbody>
+        <table class="table table-bordered  table-condensed colort">
+        <thead>
+        <tr>
+            <th>Club</th>
+            <th>Localidad</th>
+        </tr>
+        </thead>
+        <tbody id="tbody-club">        
+        </tbody>
         </table>
     </div>
 
+
 </body>
 @section Scripts{
-    <script src="~/js/club-1.0.0.js"></script>
+        <script src="~/js/club-1.0.0.js"></script>
 }
