--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="BTN nav-link" asp-area="" asp-controller="Club" asp-action="Index">Clubes</a>
                         </li>
                     </ul>
-                   <li><a href="_LoginPartial" style="display: inline-block;">¿Eres Jugador?</a></li>
+                    <partial class="BTN" name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
