--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -92,7 +92,7 @@ html {
 .BTN:active,
 .BTN:focus{  
   background-color: #102770;
-  color: #ffeba7;
+  color: #ffeba7 !important;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 .BTN:hover{  
@@ -370,21 +370,25 @@ h6 span{
   text-align: center;
   border: none;
   background-color: #ffeba7;
-  color: #102770;
+  color: #000000;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
 .btn:active,
 .btn:focus{  
   background-color: #102770;
   color: #ffeba7;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  box-shadow: 0 8px 24px 0 rgba(14, 42, 133, 0.733);
 }
 .btn:hover{  
   background-color: #102770;
-  color: #ffeba7;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  /* color: #ffeba7; */
+  color: #000000;
+  box-shadow: 0 8px 24px 0 rgba(14, 42, 133, 0.733);
 }
-
+.fondoe:hover{
+background-color: rgb(155, 6, 6);
+box-shadow: 0 8px 24px 0 rgba(129, 11, 11, 0.87);
+}
 
 .logo {
 	position: absolute;
@@ -511,7 +515,7 @@ to{transform:rotatey(0.5turn)}}
   text-shadow: #000 0 0 10px;
 }
 
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   width: 100vw;
@@ -521,7 +525,7 @@ to{transform:rotatey(0.5turn)}}
   @media (min-width: 1024px) {
     flex-direction: row;
   }
-}
+} */
 
 .item {
   position: relative;
@@ -817,7 +821,7 @@ to{transform:rotatey(0.5turn)}}
 }
 /* Fin */
 .bajar{
-  margin-top: 5%;
+  margin-top: 75px;
   color: #ffffff;
 }
 .colort{
@@ -825,6 +829,7 @@ to{transform:rotatey(0.5turn)}}
 }
 .colorB{
   background-color: #000000 !important;
+  margin-left: 50px;
 }
 .tamañot{
   width: 50% !important;
